# nepomuk-system-tray

./: CMakeLists.txt  Messages.sh
lib/: CMakeLists.txt  config.h.in  nepomuksystray_export.h  serverclient.h  systrayplugin.cpp  systrayplugin.h  systraypluginmanager.cpp  systraypluginmanager.h
plugins/: CMakeLists.txt  create_plugin.py  nepomuksystray_plugin.desktop
plugins/backup/: CMakeLists.txt  nepomukbackupsyncplugin.cpp  nepomukbackupsyncplugin.h  nepomuksystray_nepomukbackupsync.desktop  systraynepomukbackupsyncpluginui.rc
plugins/basic_template/: CMakeLists.txt.in  nepomuksystray_template.desktop.in  systraytemplatepluginui.rc.in  templateplugin.cpp.in  templateplugin.h.in
plugins/strigi/: CMakeLists.txt  nepomuksystray_strigi.desktop  strigiplugin.cpp  strigiplugin.h  systraystrigipluginui.rc
runtime/: CMakeLists.txt
runtime/plasma/: CMakeLists.txt
runtime/plasma/dataengine/: CMakeLists.txt  nepomuk_engine.cpp  nepomuk_engine.h  plasma-engine-nepomuk.desktop
runtime/systemtray/: CMakeLists.txt  main.cpp  mainWidget.ui  mainWindow.ui  mainwidget.cpp  mainwidget.h  nepomukcontroller.desktop  nepomukcontrollerrc  nepomukcontrollerui.rc  nepomuksystray_qt.desktop  nepomuksystray_qtui.rc  serviceWidget.ui  servicewidget.cpp  servicewidget.h  systray.cpp  systray.h
